# yast-metapackage-handler

./: .gitignore  .travis.yml  Dockerfile  Makefile  MetaPackageHandler.ycp  MetaPackageParser.pm  MetaPackageUrlHandler.ycp  MetaPackageWorker.ycp  OneClickInstallWorkerResponse.ycp  PackageSearch.ycp  README.md  RPMNAME  Rakefile  SearchClient.pm  YPX.pm  config  configure.in.in  kdesu.desktop  konqueror  konquerorrc  tuxsaver.html  x-suse-ymp.desktop  yast2-metapackage-handler.spec.in  yast2.desktop  ymp.desktop  ymu.desktop
desktop/: Makefile.am  org.opensuse.yast.MetapackageHandler.desktop  yast2-metapackage-handler-ymu.desktop  yast2-metapackage-handler.desktop
doc/: Makefile.am  README  TODO  tuxsaver.html  tuxsaver.ymp
mime/: Makefile.am
package/: 103.diff  SLE-label.diff  yast2-metapackage-handler.changes  yast2-metapackage-handler.spec  yast2-mpp.spec
schema/: README  README.md  foo.xml  oneclick.rnc  oneclick.rng  oneclick.xsd  sample_from_package.ymp  sample_from_pattern.ymp
spec/: spec_helper.rb  (+2 more)
src/: Makefile.am  OneClickInstall.ycp  OneClickInstallCLI  OneClickInstallCLI.ycp  OneClickInstallUI.ycp  OneClickInstallUrlHandler  OneClickInstallUrlHandler.ycp  OneClickInstallWidgets.ycp  OneClickInstallWorker.ycp  OneClickInstallWorkerFunctions.ycp  OneClickInstallWorkerResponse.ycp  YPX.pm  kdeymp.desktop  yast2-metapackage-handler-ymu.desktop  yast2-metapackage-handler.desktop
src/clients/: OneClickInstallCLI.rb  OneClickInstallCLI.ycp  OneClickInstallUI.rb  OneClickInstallUrlHandler.rb  OneClickInstallWorker.rb  OneClickInstallWorker.ycp
src/modules/: OneClickInstall.rb  OneClickInstall.ycp  OneClickInstallWidgets.rb  OneClickInstallWidgets.ycp  OneClickInstallWorkerFunctions.rb  OneClickInstallWorkerResponse.rb  OneClickInstallWorkerResponse.ycp  UserSettings.rb  UserSettings.ycp
(+3 files in other folders)
